tests/NormalTests/paczka1/fuzzy1/52737748.err
Error in line 8: QuAibx3FDS A770 0,5
Error in line 16: fZl A738 21,5
Error in line 12: QuAibx3FDS S440 64,2
Error in line 7: fsa0 A738 8,4
Error in line 15: nhqdwBq A520 13,2
Error in line 23: nhqdwBq A770 1,9
Error in line 30: QuAibx3FDS S440 59,3
Error in line 35: QuAibx3FDS A770 79,1
Error in line 40: QuAibx3FDS A520 -4,6
